--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-mentions",
+  "name": "snaphy-react-mentions",
   "version": "0.0.0-development",
   "description": "React mentions input",
-  "main": "dist/react-mentions.cjs.js",
-  "module": "dist/react-mentions.esm.js",
+  "main": "dist/snaphy-react-mentions.cjs.js",
+  "module": "dist/snaphy-react-mentions.esm.js",
   "files": [
     "dist"
   ],
