--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snaphy-react-mentions",
-  "version": "0.0.0-development",
+  "version": "0.0.1-development",
   "description": "React mentions input",
   "main": "dist/snaphy-react-mentions.cjs.js",
   "module": "dist/snaphy-react-mentions.esm.js",
@@ -87,7 +87,7 @@
     "invariant": "^2.2.4",
     "lodash": "^4.5.1",
     "prop-types": "^15.5.8",
-    "substyle": "^6.3.1"
+    "snaphy-substyle": "^0.0.0"
   },
   "peerDependencies": {
     "react": "16.x",
